refactored round create

--- a/ForeScore.WebMVC/Views/Round/SelectCourse.cshtml
+++ b/ForeScore.WebMVC/Views/Round/SelectCourse.cshtml
@@ -32,11 +32,11 @@
                 <td>
                     Hole
                 </td>
-                @for (int i = 0; i < Model.CourseDetail.Holes.Count; i++)
+                @for (int i = 0; i < Model.CourseDetail.FrontNine.Count; i++)
                 {
                     <td>
-                        @Html.DisplayFor(model => Model.CourseDetail.Holes[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
-                        @Html.HiddenFor(model => model.CourseDetail.Holes[i].HoleNumber)
+                        @Html.DisplayFor(model => Model.CourseDetail.FrontNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.HiddenFor(model => model.CourseDetail.FrontNine[i].HoleNumber)
                     </td>
                 }
             </tr>
@@ -44,11 +44,11 @@
                 <td>
                     Par
                 </td>
-                @for (int i = 0; i < Model.CourseDetail.Holes.Count; i++)
+                @for (int i = 0; i < Model.CourseDetail.FrontNine.Count; i++)
                 {
                     <td>
-                        @Html.DisplayFor(model => Model.CourseDetail.Holes[i].Par, new { htmlAttributes = new { @class = "form-control", } })
-                        @Html.HiddenFor(model => model.CourseDetail.Holes[i].Par)
+                        @Html.DisplayFor(model => Model.CourseDetail.FrontNine[i].Par, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.HiddenFor(model => model.CourseDetail.FrontNine[i].Par)
                     </td>
                 }
             </tr>
@@ -56,11 +56,11 @@
                 <td>
                     Distance (Yards)
                 </td>
-                @for (int i = 0; i < Model.CourseDetail.Holes.Count; i++)
+                @for (int i = 0; i < Model.CourseDetail.FrontNine.Count; i++)
                 {
                     <td>
-                        @Html.DisplayFor(model => Model.CourseDetail.Holes[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
-                        @Html.HiddenFor(model => model.CourseDetail.Holes[i].Distance)
+                        @Html.DisplayFor(model => Model.CourseDetail.FrontNine[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.HiddenFor(model => model.CourseDetail.FrontNine[i].Distance)
                     </td>
                 }
             </tr>
@@ -68,12 +68,12 @@
                 <td>
                     Score
                 </td>
-                @for (int i = 0; i < Model.HoleData.Count; i++)
+                @for (int i = 0; i < Model.FrontNine.Count; i++)
                 {
 
                     <td>
-                        @Html.TextBoxFor(model => Model.HoleData[i].Score, new { htmlAttributes = new { @class = "form-control", } })
-                        @Html.HiddenFor(model => Model.HoleData[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.TextBoxFor(model => Model.FrontNine[i].Score, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.HiddenFor(model => Model.FrontNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
 
                 }
@@ -82,11 +82,11 @@
                 <td>
                     Driving Distance (Yards)
                 </td>
-                @for (int i = 0; i < Model.HoleData.Count; i++)
+                @for (int i = 0; i < Model.FrontNine.Count; i++)
                 {
 
                     <td>
-                        @Html.TextBoxFor(model => Model.HoleData[i].DrivingDistance, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.TextBoxFor(model => Model.FrontNine[i].DrivingDistance, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
 
                 }
@@ -95,11 +95,11 @@
                 <td>
                     Putts
                 </td>
-                @for (int i = 0; i < Model.HoleData.Count; i++)
+                @for (int i = 0; i < Model.FrontNine.Count; i++)
                 {
 
                     <td>
-                        @Html.TextBoxFor(model => Model.HoleData[i].Putts, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.TextBoxFor(model => Model.FrontNine[i].Putts, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
 
                 }
@@ -108,12 +108,12 @@
                 <td>
                     Fairway Hit
                 </td>
-                @for (int i = 0; i < Model.HoleData.Count; i++)
+                @for (int i = 0; i < Model.FrontNine.Count; i++)
                 {
 
                     <td>
-                        @Html.RadioButtonFor(model => Model.HoleData[i].FairwayHit, true, new { htmlAttributes = new { @class = "form-control", } })
-                        @Html.RadioButtonFor(model => Model.HoleData[i].FairwayHit, false, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.RadioButtonFor(model => Model.FrontNine[i].FairwayHit, true, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.RadioButtonFor(model => Model.FrontNine[i].FairwayHit, false, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
 
                 }
@@ -122,118 +122,117 @@
                 <td>
                     Penalty(s)
                 </td>
-                @for (int i = 0; i < Model.HoleData.Count; i++)
+                @for (int i = 0; i < Model.FrontNine.Count; i++)
                 {
 
                     <td>
-                        @Html.RadioButtonFor(model => Model.HoleData[i].Penalty, true, new { htmlAttributes = new { @class = "form-control", } })
-                        @Html.RadioButtonFor(model => Model.HoleData[i].Penalty, false, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.RadioButtonFor(model => Model.FrontNine[i].Penalty, true, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.RadioButtonFor(model => Model.FrontNine[i].Penalty, false, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
 
                 }
             </tr>
         </table>
-        @*<table>
-                <tr>
+        <br />
+        <table>
+            <tr>
+                <td>
+                    Distance (Yards)
+                </td>
+                @for (int i = 0; i < Model.CourseDetail.BackNine.Count; i++)
+                {
                     <td>
-                        Distance (Yards)
+                        @Html.DisplayFor(model => Model.CourseDetail.BackNine[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
-                    @for (int i = 0; i < Model.CourseDetail.Holes.Count; i++)
-                    {
-                        <td>
-                            @Html.DisplayFor(model => Model.CourseDetail.Holes[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
-                        </td>
-                    }
-                </tr>
-                <tr>
+                }
+            </tr>
+            <tr>
+                <td>
+                    Par
+                </td>
+                @for (int i = 0; i < Model.CourseDetail.BackNine.Count; i++)
+                {
                     <td>
-                        Par
+                        @Html.DisplayFor(model => Model.CourseDetail.BackNine[i].Par, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
-                    @for (int i = 0; i < Model.CourseDetail.Holes.Count; i++)
-                    {
-                        <td>
-                            @Html.DisplayFor(model => Model.CourseDetail.Holes[i].Par, new { htmlAttributes = new { @class = "form-control", } })
-                        </td>
-                    }
-                </tr>
-                <tr>
+                }
+            </tr>
+            <tr>
+                <td>
+                    Hole
+                </td>
+                @for (int i = 0; i < Model.CourseDetail.BackNine.Count; i++)
+                {
                     <td>
-                        Hole
+                        @Html.DisplayFor(model => Model.CourseDetail.BackNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
-                    @for (int i = 0; i < Model.CourseDetail.Holes.Count; i++)
-                    {
-                        <td>
-                            @Html.DisplayFor(model => Model.CourseDetail.Holes[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
-                        </td>
-                    }
-                </tr>
-                <tr>
+                }
+            </tr>
+            <tr>
+                <td>
+                    Score
+                </td>
+                @for (int i = 0; i < Model.BackNine.Count; i++)
+                {
+
                     <td>
-                        Score
+                        @Html.TextBoxFor(model => Model.BackNine[i].Score, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.HiddenFor(model => Model.BackNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
-                    @for (int i = 0; i < Model.HoleData.Count; i++)
-                    {
 
-                        <td>
-                            @Html.TextBoxFor(model => Model.HoleData[i].Score, new { htmlAttributes = new { @class = "form-control", } })
-                            @Html.HiddenFor(model => Model.HoleData[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
-                        </td>
+                }
+            </tr>
+            <tr>
+                <td>
+                    Driving Distance (Yards)
+                </td>
+                @for (int i = 0; i < Model.BackNine.Count; i++)
+                {
 
-                    }
-                </tr>
-                <tr>
                     <td>
-                        Driving Distance (Yards)
+                        @Html.TextBoxFor(model => Model.BackNine[i].DrivingDistance, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
-                    @for (int i = 0; i < Model.HoleData.Count; i++)
-                    {
 
-                        <td>
-                            @Html.TextBoxFor(model => Model.HoleData[i].DrivingDistance, new { htmlAttributes = new { @class = "form-control", } })
-                        </td>
+                }
+            </tr>
+            <tr>
+                <td>
+                    Putts
+                </td>
+                @for (int i = 0; i < Model.BackNine.Count; i++)
+                {
 
-                    }
-                </tr>
-                <tr>
                     <td>
-                        Putts
+                        @Html.TextBoxFor(model => Model.BackNine[i].Putts, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
-                    @for (int i = 0; i < Model.HoleData.Count; i++)
-                    {
 
-                        <td>
-                            @Html.TextBoxFor(model => Model.HoleData[i].Putts, new { htmlAttributes = new { @class = "form-control", } })
-                        </td>
-
-                    }
-                </tr>
-                <tr>
+                }
+            </tr>
+            <tr>
+                <td>
+                    Fairway Hit
+                </td>
+                @for (int i = 0; i < Model.BackNine.Count; i++)
+                {
                     <td>
-                        Fairway Hit
+                        @Html.RadioButtonFor(model => Model.FrontNine[i].FairwayHit, true, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.RadioButtonFor(model => Model.FrontNine[i].FairwayHit, false, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
-                    @for (int i = 0; i < Model.HoleData.Count; i++)
-                    {
-
-                        <td>
-                            @Html.CheckBoxFor(model => Model.HoleData[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
-                        </td>
-
-                    }
-                </tr>
-                <tr>
+                }
+            </tr>
+            <tr>
+                <td>
+                    Penalty(s)
+                </td>
+                @for (int i = 0; i < Model.BackNine.Count; i++)
+                {
                     <td>
-                        Penalty(s)
+                        @Html.RadioButtonFor(model => Model.BackNine[i].Penalty, true, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.RadioButtonFor(model => Model.BackNine[i].Penalty, false, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
-                    @for (int i = 0; i < Model.HoleData.Count; i++)
-                    {
-
-                        <td>
-                            @Html.CheckBoxFor(model => Model.HoleData[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
-                        </td>
-
-                    }
-                </tr>
-            </table>*@
+                }
+            </tr>
+        </table>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
