--- a/ForeScore.WebMVC/Views/Course/Edit.cshtml
+++ b/ForeScore.WebMVC/Views/Course/Edit.cshtml
@@ -50,34 +50,55 @@
             </div>
         </div>
 
-        <table>
-            <tr>
-                <th>
-                    Hole
-                </th>
-                @for (int i = 1; i < 19; i++)
-                {
-                    <th>
-                        @Html.Label(i.ToString(), new { htmlAttributes = new { @class = "form-control", } })
-                    </th>
-                }
-            </tr>
-            <tr>
-                <th>
-                    Par
-                </th>
-                @for (int i = 0; i < Model.Holes.Count; i++)
-                {
-                    <td>
-                        @Html.TextBoxFor(model => Model.Holes[i].Par, new { htmlAttributes = new { @class = "form-control", } })
-                        @Html.TextBoxFor(model => Model.Holes[i].Distance, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.HiddenFor(model => Model.Holes[i].HoleNumber)
-                        @Html.HiddenFor(model => Model.Holes[i].HoleId)
-                    </td>
+        <div class="form-horizontal">
 
-                }
-            </tr>
-        </table>
+            <table>
+                <tr>
+                    @for (int i = 0; i < Model.FrontNine.Count; i++)
+                    {
+                        <td>
+                            @Html.DisplayFor(model => model.FrontNine[i].HoleNumber)
+                        </td>
+                    }
+                </tr>
+                <tr>
+                    @for (int i = 0; i < Model.FrontNine.Count; i++)
+                    {
+                        <td>
+                            @Html.TextBoxFor(model => Model.FrontNine[i].Par, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.TextBoxFor(model => Model.FrontNine[i].Distance, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.HiddenFor(model => Model.FrontNine[i].HoleId)
+                            @Html.HiddenFor(model => Model.FrontNine[i].HoleNumber)
+                        </td>
+
+                    }
+                </tr>
+            </table>
+            <br />
+            <table>
+                <tr>
+                    @for (int i = 0; i < Model.BackNine.Count; i++)
+                    {
+                        <td>
+                            @Html.DisplayFor(model => model.BackNine[i].HoleNumber)
+                        </td>
+                    }
+                </tr>
+                <tr>
+                    @for (int i = 0; i < Model.BackNine.Count; i++)
+                    {
+                        <td>
+                            @Html.TextBoxFor(model => Model.BackNine[i].Par, new { htmlAttributes = new { @class = "form-control", } })
+                            @Html.TextBoxFor(model => Model.BackNine[i].Distance, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.HiddenFor(model => Model.BackNine[i].HoleId)
+                            @Html.HiddenFor(model => Model.BackNine[i].HoleNumber)
+                        </td>
+
+                    }
+                </tr>
+            </table>
+
+        </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-2" })
