--- a/ForeScore.WebMVC/Views/Round/Details.cshtml
+++ b/ForeScore.WebMVC/Views/Round/Details.cshtml
@@ -42,10 +42,10 @@
                 <td>
                     Hole
                 </td>
-                @for (int i = 0; i < Model.CourseDetail.Holes.Count; i++)
+                @for (int i = 0; i < Model.CourseDetail.FrontNine.Count; i++)
                 {
                     <td>
-                        @Html.DisplayFor(model => Model.CourseDetail.Holes[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.DisplayFor(model => Model.CourseDetail.FrontNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
                 }
             </tr>
@@ -53,10 +53,10 @@
                 <td>
                     Par
                 </td>
-                @for (int i = 0; i < Model.CourseDetail.Holes.Count; i++)
+                @for (int i = 0; i < Model.CourseDetail.FrontNine.Count; i++)
                 {
                     <td>
-                        @Html.DisplayFor(model => Model.CourseDetail.Holes[i].Par, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.DisplayFor(model => Model.CourseDetail.FrontNine[i].Par, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
                 }
             </tr>
@@ -64,10 +64,10 @@
                 <td>
                     Distance (Yards)
                 </td>
-                @for (int i = 0; i < Model.CourseDetail.Holes.Count; i++)
+                @for (int i = 0; i < Model.CourseDetail.FrontNine.Count; i++)
                 {
                     <td>
-                        @Html.DisplayFor(model => Model.CourseDetail.Holes[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.DisplayFor(model => Model.CourseDetail.FrontNine[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
                 }
             </tr>
@@ -75,12 +75,12 @@
                 <td>
                     Score
                 </td>
-                @for (int i = 0; i < Model.HoleData.Count; i++)
+                @for (int i = 0; i < Model.FrontNine.Count; i++)
                 {
 
                     <td>
-                        @Html.DisplayFor(model => Model.HoleData[i].Score, new { htmlAttributes = new { @class = "form-control", } })
-                        @Html.HiddenFor(model => Model.HoleData[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.DisplayFor(model => Model.FrontNine[i].Score, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.HiddenFor(model => Model.FrontNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
 
                 }
@@ -89,11 +89,11 @@
                 <td>
                     Driving Distance (Yards)
                 </td>
-                @for (int i = 0; i < Model.HoleData.Count; i++)
+                @for (int i = 0; i < Model.FrontNine.Count; i++)
                 {
 
                     <td>
-                        @Html.DisplayFor(model => Model.HoleData[i].DrivingDistance, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.DisplayFor(model => Model.FrontNine[i].DrivingDistance, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
 
                 }
@@ -102,11 +102,11 @@
                 <td>
                     Putts
                 </td>
-                @for (int i = 0; i < Model.HoleData.Count; i++)
+                @for (int i = 0; i < Model.FrontNine.Count; i++)
                 {
 
                     <td>
-                        @Html.DisplayFor(model => Model.HoleData[i].Putts, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.DisplayFor(model => Model.FrontNine[i].Putts, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
 
                 }
@@ -115,12 +115,11 @@
                 <td>
                     Fairway Hit
                 </td>
-                @for (int i = 0; i < Model.HoleData.Count; i++)
+                @for (int i = 0; i < Model.FrontNine.Count; i++)
                 {
 
                     <td>
-                        @Html.DisplayFor(model => Model.HoleData[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
-                        @Html.DisplayFor(model => Model.HoleData[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.DisplayFor(model => Model.FrontNine[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
 
                 }
@@ -129,12 +128,113 @@
                 <td>
                     Penalty(s)
                 </td>
-                @for (int i = 0; i < Model.HoleData.Count; i++)
+                @for (int i = 0; i < Model.FrontNine.Count; i++)
                 {
 
                     <td>
-                        @Html.DisplayFor(model => Model.HoleData[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
-                        @Html.DisplayFor(model => Model.HoleData[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.DisplayFor(model => Model.FrontNine[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
+                    </td>
+
+                }
+            </tr>
+        </table>
+        <br />
+        <table class="table table-bordered">
+            <tr>
+                <td>
+                    Hole
+                </td>
+                @for (int i = 0; i < Model.CourseDetail.BackNine.Count; i++)
+                {
+                    <td>
+                        @Html.DisplayFor(model => Model.CourseDetail.BackNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+                    </td>
+                }
+            </tr>
+            <tr>
+                <td>
+                    Par
+                </td>
+                @for (int i = 0; i < Model.CourseDetail.BackNine.Count; i++)
+                {
+                    <td>
+                        @Html.DisplayFor(model => Model.CourseDetail.BackNine[i].Par, new { htmlAttributes = new { @class = "form-control", } })
+                    </td>
+                }
+            </tr>
+            <tr>
+                <td>
+                    Distance (Yards)
+                </td>
+                @for (int i = 0; i < Model.CourseDetail.BackNine.Count; i++)
+                {
+                    <td>
+                        @Html.DisplayFor(model => Model.CourseDetail.BackNine[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
+                    </td>
+                }
+            </tr>
+            <tr>
+                <td>
+                    Score
+                </td>
+                @for (int i = 0; i < Model.BackNine.Count; i++)
+                {
+
+                    <td>
+                        @Html.DisplayFor(model => Model.BackNine[i].Score, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.HiddenFor(model => Model.BackNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+                    </td>
+
+                }
+            </tr>
+            <tr>
+                <td>
+                    Driving Distance (Yards)
+                </td>
+                @for (int i = 0; i < Model.BackNine.Count; i++)
+                {
+
+                    <td>
+                        @Html.DisplayFor(model => Model.BackNine[i].DrivingDistance, new { htmlAttributes = new { @class = "form-control", } })
+                    </td>
+
+                }
+            </tr>
+            <tr>
+                <td>
+                    Putts
+                </td>
+                @for (int i = 0; i < Model.BackNine.Count; i++)
+                {
+
+                    <td>
+                        @Html.DisplayFor(model => Model.BackNine[i].Putts, new { htmlAttributes = new { @class = "form-control", } })
+                    </td>
+
+                }
+            </tr>
+            <tr>
+                <td>
+                    Fairway Hit
+                </td>
+                @for (int i = 0; i < Model.BackNine.Count; i++)
+                {
+
+                    <td>
+                        @Html.DisplayFor(model => Model.BackNine[i].FairwayHit, new { htmlAttributes = new { @class = "form-control", } })
+                    </td>
+
+                }
+            </tr>
+            <tr>
+                <td>
+                    Penalty(s)
+                </td>
+                @for (int i = 0; i < Model.BackNine.Count; i++)
+                {
+
+                    <td>
+                        @Html.DisplayFor(model => Model.BackNine[i].Penalty, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
 
                 }
