--- a/ForeScore.WebMVC/Views/Round/SelectCourse.cshtml
+++ b/ForeScore.WebMVC/Views/Round/SelectCourse.cshtml
@@ -143,6 +143,7 @@
                 {
                     <td>
                         @Html.DisplayFor(model => Model.CourseDetail.BackNine[i].Distance, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.HiddenFor(model => Model.CourseDetail.BackNine[i].Distance)
                     </td>
                 }
             </tr>
@@ -154,6 +155,7 @@
                 {
                     <td>
                         @Html.DisplayFor(model => Model.CourseDetail.BackNine[i].Par, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.HiddenFor(model => Model.CourseDetail.BackNine[i].Par)
                     </td>
                 }
             </tr>
@@ -165,6 +167,7 @@
                 {
                     <td>
                         @Html.DisplayFor(model => Model.CourseDetail.BackNine[i].HoleNumber, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.HiddenFor(model => Model.CourseDetail.BackNine[i].HoleNumber)
                     </td>
                 }
             </tr>
@@ -215,8 +218,8 @@
                 @for (int i = 0; i < Model.BackNine.Count; i++)
                 {
                     <td>
-                        @Html.RadioButtonFor(model => Model.FrontNine[i].FairwayHit, true, new { htmlAttributes = new { @class = "form-control", } })
-                        @Html.RadioButtonFor(model => Model.FrontNine[i].FairwayHit, false, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.RadioButtonFor(model => Model.BackNine[i].FairwayHit, true, new { htmlAttributes = new { @class = "form-control", } })
+                        @Html.RadioButtonFor(model => Model.BackNine[i].FairwayHit, false, new { htmlAttributes = new { @class = "form-control", } })
                     </td>
                 }
             </tr>
